force-app/main/default/objects/Dummy10__c/Dummy10__c.object-meta.xml
<CustomObject>
    <label>Dummy10</label>
    <nameField>
        <label>Dummy10 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy10</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>