force-app/main/default/objects/Dummy10__c/fields/FooBar001__c.field-meta.xml
<CustomField>
    <fullName>FooBar001__c</fullName>
    <label>FooBar001</label>
    <length>255</length>
    <type>Text</type>
</CustomField>