force-app/main/default/objects/Dummy10__c/fields/FooBar018__c.field-meta.xml
<CustomField>
    <fullName>FooBar018__c</fullName>
    <label>FooBar018</label>
    <length>255</length>
    <type>Text</type>
</CustomField>