force-app/main/default/objects/Dummy10__c/fields/FooBar032__c.field-meta.xml
<CustomField>
    <fullName>FooBar032__c</fullName>
    <label>FooBar032</label>
    <length>255</length>
    <type>Text</type>
</CustomField>